--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mariadb://127.0.0.1:3306/greendb
+    url: jdbc:mariadb://localhost:3306/greendb
     driver-class-name: org.mariadb.jdbc.Driver
     username: green
     password: green1234
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       '[hibernate.format_sql]': true    
   output:
