레이지 로딩, 오픈인뷰, read 트랜잭션 공부 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,8 +10,10 @@ spring:
     username: green
     password: green1234
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: none
+      
     properties:
       '[hibernate.format_sql]': true    
   output:
