--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// 서드파티
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.3'
+
 }
 
 tasks.named('test') {
